@@ -561,13 +561,19 @@ sp_repr_document_new (const gchar * rootname)
 {
 	SPRepr * repr, * root;
 
-	repr = sp_repr_new ("?xml");
+	repr = sp_repr_new ("xml");
 	if (!strcmp (rootname, "svg")) {
 		sp_repr_set_attr (repr, "version", "1.0");
 		sp_repr_set_attr (repr, "standalone", "no");
 		sp_repr_set_attr (repr, "doctype",
-				  "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG August 1999//EN\"\n"
-				  "\"http://www.w3.org/Graphics/SVG/SVG-19990812.dtd\">");
+				  "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 20010904//EN\"\n"
+				  "\"http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd\"\n"
+				  "[\n"
+				  " <!ATTLIST svg\n"
+				  "  xmlns:xlink CDATA #FIXED \"http://www.w3.org/1999/xlink\">\n"
+				  "]>\n");
+		sp_repr_set_attr (repr, "comment",
+				  "<!-- Created with Sodipodi (\"http://www.sodipodi.com/\") -->\n");
 	}
 
 	root = sp_repr_new (rootname);
